ClassAndPlanningIdComparator cleanup (#2126)