@@ -1,6 +1,9 @@
 package org.optaplanner.core.api.score.constraint;
 
-import java.util.Arrays;
+import static org.optaplanner.core.api.score.buildin.simple.SimpleScore.ONE;
+import static org.optaplanner.core.api.score.buildin.simple.SimpleScore.ZERO;
+
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 import org.optaplanner.core.api.score.buildin.simple.SimpleScore;
@@ -11,10 +14,10 @@ class ConstraintMatchTest {
     @Test
     void equalsAndHashCode() { // No CM should equal any other.
         ConstraintMatch<SimpleScore> constraintMatch =
-                new ConstraintMatch<>("a.b", "c", Arrays.asList("e1"), SimpleScore.ZERO);
+                new ConstraintMatch<>("a.b", "c", List.of("e1"), ZERO);
         PlannerAssert.assertObjectsAreEqual(constraintMatch, constraintMatch);
         ConstraintMatch<SimpleScore> constraintMatch2 =
-                new ConstraintMatch<>("a.b", "c", Arrays.asList("e1"), SimpleScore.ZERO);
+                new ConstraintMatch<>("a.b", "c", List.of("e1"), ZERO);
         // Cast do avoid Comparable checks.
         PlannerAssert.assertObjectsAreNotEqual(constraintMatch, (Object) constraintMatch2);
     }
@@ -22,18 +25,19 @@ class ConstraintMatchTest {
     @Test
     void compareTo() {
         PlannerAssert.assertCompareToOrder(
-                new ConstraintMatch<>("a.b", "a", Arrays.asList("a"), SimpleScore.ZERO),
-                new ConstraintMatch<>("a.b", "a", Arrays.asList("a", "aa"), SimpleScore.ZERO),
-                new ConstraintMatch<>("a.b", "a", Arrays.asList("a", "aa", "a"), SimpleScore.ZERO),
-                new ConstraintMatch<>("a.b", "a", Arrays.asList("a", "aa", "b"), SimpleScore.ZERO),
-                new ConstraintMatch<>("a.b", "a", Arrays.asList("a", "ab"), SimpleScore.ZERO),
-                new ConstraintMatch<>("a.b", "a", Arrays.asList("a", "c"), SimpleScore.ZERO),
-                new ConstraintMatch<>("a.b", "b", Arrays.asList("a", "aa"), SimpleScore.ZERO),
-                new ConstraintMatch<>("a.b", "b", Arrays.asList("a", "ab"), SimpleScore.ZERO),
-                new ConstraintMatch<>("a.b", "b", Arrays.asList("a", "c"), SimpleScore.ZERO),
-                new ConstraintMatch<>("a.c", "a", Arrays.asList("a", "aa"), SimpleScore.ZERO),
-                new ConstraintMatch<>("a.c", "a", Arrays.asList("a", "ab"), SimpleScore.ZERO),
-                new ConstraintMatch<>("a.c", "a", Arrays.asList("a", "c"), SimpleScore.ZERO));
+                new ConstraintMatch<>("a.b", "a", List.of("a"), ZERO),
+                new ConstraintMatch<>("a.b", "a", List.of("a", "aa"), ZERO),
+                new ConstraintMatch<>("a.b", "a", List.of("a", "ab"), ZERO),
+                new ConstraintMatch<>("a.b", "a", List.of("a", "c"), ZERO),
+                new ConstraintMatch<>("a.b", "a", List.of("a", "aa", "a"), ZERO),
+                new ConstraintMatch<>("a.b", "a", List.of("a", "aa", "b"), ZERO),
+                new ConstraintMatch<>("a.b", "a", List.of("a", "aa"), ONE),
+                new ConstraintMatch<>("a.b", "b", List.of("a", "aa"), ZERO),
+                new ConstraintMatch<>("a.b", "b", List.of("a", "ab"), ZERO),
+                new ConstraintMatch<>("a.b", "b", List.of("a", "c"), ZERO),
+                new ConstraintMatch<>("a.c", "a", List.of("a", "aa"), ZERO),
+                new ConstraintMatch<>("a.c", "a", List.of("a", "ab"), ZERO),
+                new ConstraintMatch<>("a.c", "a", List.of("a", "c"), ZERO));
     }
 
 }
